<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>dummy_concert</name>
  <version>0.0.0</version>
  <description>
    it is dummy
  </description>
  <maintainer email='dwlee@gmail.com'>dwlee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_common_test_services</run_depend>
</package>