<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>dummy_solution_1</name>
  <version>1.0.0</version>
  <description>
    the dummy solution package
  </description>
  <maintainer email='shkwak@gmail.com'>shkwak</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_common_test_services</run_depend>
</package>