<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>sample00</name>
  <version>1.0.0</version>
  <description>
    sample00
  </description>
  <maintainer email='dwlee@gmail.com'>dwlee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_common_test_services</run_depend>
</package>