<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>sample01</name>
  <version>1.0.0</version>
  <description>
    01
  </description>
  <maintainer email='sample01@gmail.com'>sample01</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_common_test_services</run_depend>
</package>