<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>sample_concert_2</name>
  <version>0.0.1</version>
  <description>
    sample concert for testing FR SM 2
  </description>
  <maintainer email='dwlee@gmail.com'>dwlee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_master</run_depend>
  <run_depend>concert_common_services</run_depend>
</package>