<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>sample_solution</name>
  <version>1</version>
  <description>
    123
  </description>
  <maintainer email='dwlee@gmail.com'>dwlee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_common_test_services</run_depend>
</package>