<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>sample_test_5</name>
  <version>0.0.1</version>
  <description>
    sample_test_5
  </description>
  <maintainer email='dwlee@gmail.com'>dwlee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_common_services</run_depend>
  <run_depend>concert_common_test_services</run_depend>
  <run_depend>demo_services</run_depend>
</package>