<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>test_solution_1</name>
  <version>1.0.0</version>
  <description>
    the test solution 1 package
  </description>
  <maintainer email='shkwak@gmail.com'>shkwak</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_master</run_depend>
  <run_depend>concert_common_services</run_depend>
</package>
