<?xml version='1.0' encoding='UTF-8'?>
<package>
  <name>test_solution_12</name>
  <version>1.1.1</version>
  <description>
    test 12
  </description>
  <maintainer email='shkwak@gmail.com'>shkwak</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>concert_common_services</run_depend>
  <run_depend>concert_common_test_services</run_depend>
</package>